# algorithmic-graph-theory-assignment

./: .gitignore  CMakeLists.txt  GraphSolver  README.md  main.cpp  main.txt  test.txt  test_1.txt  test_line.txt
include/: Graph.hpp  Islands.hpp
src/: Graph.cpp  Islands.cpp
tests/: graph1.txt  graph2.txt  graph3.txt  island2.txt  island3.txt
